@@ -18,6 +18,7 @@ v.0.5dev (ongoing development)
  * hd44780-4bit: Fix bug not checking for keypad rows 7-10 correctly
  * Modify serial drivers to use cfmakeraw
  + hd44780: Add a 'none' charmap which does not replace any character
+ * hd44780: Change mapping for spanish 'n with tilde' characters
 
 v0.5.3
  + lcdexec: notification when called program finishes
